checkout process added
